# mmog-microtx-aws-serverless-rs

./: .gitignore  README.md
mmog-microtx-js/: README.md  package.json
mmog-microtx-rs/: COMPARISON.md  Cargo.toml  README.md
mmog-microtx-rs/migrations/: 001_create_transactions.sql
mmog-microtx-rs/src/errors/: mod.rs
mmog-microtx-rs/src/handlers/: health.rs
mmog-microtx-rs/src/models/: config.rs  mod.rs  request.rs  transaction.rs
mmog-microtx-rs/src/services/: mod.rs
mmog-microtx-rs/src/strategies/: payment.rs
og-serverless-tx-js/: README.md  package.json  template.yaml
og-serverless-tx-js/events/: purchase.json
og-serverless-tx-js/src/: handler.js
og-serverless-tx-rs/: Cargo.toml  template.yaml
og-serverless-tx-rs/events/: purchase.json
og-serverless-tx-rs/src/: main.rs
og-serverless-tx-rs/src/handlers/: mod.rs  purchase.rs  router.rs  transactions.rs
og-serverless-tx-rs/src/models/: response.rs
og-serverless-tx-rs/src/services/: database.rs  payment.rs
og-serverless-tx-rs/src/strategies/: mod.rs
